chore: gc logging changes